# aoc

./: .ocamlformat  README.md  aoc.opam  dune-project
data/: .gitignore
lib/: aoc.ml  common.ml  d01a.ml  d01b.ml  d02a.ml  d02b.ml  d03a.ml  d03b.ml  d04a.ml  d04b.ml  d05a.ml  d05b.ml  d06a.ml  d06b.ml  d07a.ml  d07b.ml  d08a.ml  d08b.ml  d09a.ml  d09b.ml  d10a.ml  d10b.ml  d11a.ml  d11b.ml  d12a.ml  d12b.ml  d13a.ml  d13b.ml  d14a.ml  d14b.ml  d15a.ml  d15b.ml  d16a.ml  d16b.ml  d17a.ml  d17b.ml  dune  mat.ml
test/: dune  test_aoc.ml
