(lang dune 3.17)

(name aoc)

(generate_opam_files true)

(source
 (github ftvkyo/aoc))

(authors "Andrei Stepanenko <andrei@ftvkyo.me>")

(maintainers "Andrei Stepanenko <andrei@ftvkyo.me>")

(license LICENSE)

(documentation https://github.com/ftvkyo/aoc)

(package
 (name aoc)
 (synopsis "Advent of Code")
 (description "Solving Advent of Code with OCaml")
 (depends ocaml)
 (tags
  ("Advent of Code" "OCaml")))
